# clap-prototype

./: .gitignore  Cargo.toml
clap-proc-ir/: Cargo.toml
clap-proc-ir/src/: c_str.rs  clap_extension.rs  ext.rs  lib.rs  plugin.rs  plugin_parameter.rs  transparent_wrapper.rs
clap-proc-ir/src/ext/: audio_ports.rs  gui.rs  params.rs  state.rs  state_context.rs
clap-proc-ir/src/plugin/: entrypoint.rs  parameter.rs
clap-proc-tools/: Cargo.toml
clap-proc-tools/src/: lib.rs
ffi-wrap/: Cargo.toml
ffi-wrap/src/: ir.rs  lib.rs
ffi-wrap/src/ir/: implementation.rs  transparent.rs
src/: ext.rs  factory.rs  lib.rs  plugin.rs
src/ext/: audio_ports.rs  gui.rs  mod.rs  params.rs  state.rs  state_context.rs
src/ext/gui/: mod.rs
src/plugin/: descriptor.rs  features.rs  mod.rs  str_types.rs
